--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "castle-relation",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist/**/*.js",
+    "dist/**/*.d.ts"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,5 +21,13 @@
   "bugs": {
     "url": "https://github.com/YanCastle/castle-relation/issues"
   },
-  "homepage": "https://github.com/YanCastle/castle-relation#readme"
+  "homepage": "https://github.com/YanCastle/castle-relation#readme",
+  "dependencies": {
+    "castle-function": "^1.0.1",
+    "castle-model": "^1.0.1",
+    "lodash": "^4.17.11"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.119"
+  }
 }
