--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ctsy/relation",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -25,10 +25,10 @@
   },
   "homepage": "https://github.com/YanCastle/castle-relation#readme",
   "dependencies": {
-    "@ctsy/model": "^1.0.17",
+    "@ctsy/model": "^1.0.18",
     "castle-function": "^1.0.1",
     "lodash": "^4.17.11",
-    "sequelize": "^5.8.9"
+    "sequelize": "4.43.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.119",
