--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ctsy/relation",
-  "version": "1.0.10",
+  "version": "1.0.11",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -25,8 +25,8 @@
   },
   "homepage": "https://github.com/YanCastle/castle-relation#readme",
   "dependencies": {
-    "@ctsy/model": "^1.0.18",
-    "castle-function": "^1.0.1",
+    "@ctsy/model": "~1.0.19",
+    "castle-function": "~1.0.1",
     "lodash": "^4.17.11",
     "sequelize": "4.43.0"
   },
