--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ctsy/relation",
-  "version": "1.0.11",
+  "version": "1.0.12",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -11,7 +11,8 @@
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc"
+    "build": "tsc",
+    "prepublish": "rm -rf dist && tsc"
   },
   "repository": {
     "type": "git",
@@ -25,10 +26,10 @@
   },
   "homepage": "https://github.com/YanCastle/castle-relation#readme",
   "dependencies": {
-    "@ctsy/model": "~1.0.19",
+    "@ctsy/model": "~1.0.21",
     "castle-function": "~1.0.1",
     "lodash": "^4.17.11",
-    "sequelize": "4.43.0"
+    "sequelize": "^4.43.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.119",
