--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,6 @@
 {
   "compilerOptions": {
-    // 与 Vue 的浏览器支持保持一致
-    "target": "es6",
-    // 这可以对 `this` 上的数据属性进行更严格的推断
+    "target": "esnext",
     "strict": true,
     "sourceMap": true,
     "declaration": true,
@@ -10,10 +8,9 @@
     "moduleResolution": "node",
     "outDir": "dist",
     "experimentalDecorators": true,
-
     "strictFunctionTypes": false
   },
   "include": [
-    "src/**/*.ts"
+    "src/"
   ]
 }
