--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ctsy/relation",
-  "version": "1.0.13",
+  "version": "2.0.1",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -11,8 +11,7 @@
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
-    "prepublish": "rm -rf dist && tsc"
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -26,12 +25,11 @@
   },
   "homepage": "https://github.com/YanCastle/castle-relation#readme",
   "dependencies": {
-    "@ctsy/model": "^1.0",
+    "@ctsy/model": "^2.0.0",
     "castle-function": "^1.0",
-    "lodash": "^4.17.11"
+    "lodash": "^4.17.15"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14",
-    "@types/sequelize": "^4.27"
+    "@types/lodash": "^4.14"
   }
 }
