--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ctsy/relation",
-  "version": "2.0.5",
+  "version": "2.0.6",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -31,8 +31,8 @@
     "lodash": "*"
   },
   "devDependencies": {
-    "@types/validator": "*",
     "@types/bluebird": "*",
-    "@types/lodash": "*"
+    "@types/lodash": "*",
+    "@types/validator": "*"
   }
 }
